// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CustomIcon without crashing 1`] = `
<body>
  <div>
    <section
      class="rcx-box rcx-box--full  rcx-callout"
    >
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-icon--name-hash rcx-icon  rcx-callout__icon rcx-css-4pvxx3"
      >
        
      </i>
      <div
        class="rcx-box rcx-box--full rcx-callout__wrapper"
      >
        <div
          class="rcx-box rcx-box--full rcx-callout__title"
        >
          This is a message with custom icon
        </div>
        <div
          class="rcx-box rcx-box--full rcx-callout__content"
        >
          This is a generic description.
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders Danger without crashing 1`] = `
<body>
  <div>
    <section
      class="rcx-box rcx-box--full  rcx-callout rcx-callout--danger"
    >
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-icon--name-ban rcx-icon  rcx-callout__icon rcx-css-4pvxx3"
      >
        
      </i>
      <div
        class="rcx-box rcx-box--full rcx-callout__wrapper"
      >
        <div
          class="rcx-box rcx-box--full rcx-callout__title"
        >
          This is a danger message
        </div>
        <div
          class="rcx-box rcx-box--full rcx-callout__content"
        >
          This is a generic description.
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <section
      class="rcx-box rcx-box--full  rcx-callout"
    >
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon  rcx-callout__icon rcx-css-4pvxx3"
      >
        
      </i>
      <div
        class="rcx-box rcx-box--full rcx-callout__wrapper"
      >
        <div
          class="rcx-box rcx-box--full rcx-callout__title"
        >
          This is a generic title
        </div>
        <div
          class="rcx-box rcx-box--full rcx-callout__content"
        >
          This is a generic description.
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders Info without crashing 1`] = `
<body>
  <div>
    <section
      class="rcx-box rcx-box--full  rcx-callout rcx-callout--info"
    >
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon  rcx-callout__icon rcx-css-4pvxx3"
      >
        
      </i>
      <div
        class="rcx-box rcx-box--full rcx-callout__wrapper"
      >
        <div
          class="rcx-box rcx-box--full rcx-callout__title"
        >
          This is a info message
        </div>
        <div
          class="rcx-box rcx-box--full rcx-callout__content"
        >
          This is a generic description.
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders Success without crashing 1`] = `
<body>
  <div>
    <section
      class="rcx-box rcx-box--full  rcx-callout rcx-callout--success"
    >
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-icon--name-checkmark-circled rcx-icon  rcx-callout__icon rcx-css-4pvxx3"
      >
        
      </i>
      <div
        class="rcx-box rcx-box--full rcx-callout__wrapper"
      >
        <div
          class="rcx-box rcx-box--full rcx-callout__title"
        >
          This is a success message
        </div>
        <div
          class="rcx-box rcx-box--full rcx-callout__content"
        >
          This is a generic description.
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders Warning without crashing 1`] = `
<body>
  <div>
    <section
      class="rcx-box rcx-box--full  rcx-callout rcx-callout--warning"
    >
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-icon--name-warning rcx-icon  rcx-callout__icon rcx-css-4pvxx3"
      >
        
      </i>
      <div
        class="rcx-box rcx-box--full rcx-callout__wrapper"
      >
        <div
          class="rcx-box rcx-box--full rcx-callout__title"
        >
          This is a warning message
        </div>
        <div
          class="rcx-box rcx-box--full rcx-callout__content"
        >
          This is a generic description.
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders WithDescriptionOnly without crashing 1`] = `
<body>
  <div>
    <section
      class="rcx-box rcx-box--full  rcx-callout"
    >
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon  rcx-callout__icon rcx-css-4pvxx3"
      >
        
      </i>
      <div
        class="rcx-box rcx-box--full rcx-callout__wrapper"
      >
        <div
          class="rcx-box rcx-box--full rcx-callout__content"
        >
          This is a generic description.
        </div>
      </div>
    </section>
  </div>
</body>
`;
